Fix section padding on mobile

--- a/style.css
+++ b/style.css
@@ -142,8 +142,7 @@ section {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  padding: 0 0.8em;
-  padding-bottom: 0.6em;
+  padding: 0 0 0.6em 0;
   transition: all .15s linear;
   width: 100%;
 }
@@ -440,6 +439,9 @@ article:hover header {
   }
   .header-nav p {
     display: block;
+  }
+  section {
+    padding: 0 0.8em 0.6em 0.8em;
   }
   .profile-4,
   .profile-3 {
